--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
         <section id="preparacion">
             <h2>1. Preparación</h2>
             <p>Verifica las especificaciones mínimas de hardware requeridas para la versión de Windows que deseas instalar. Por ejemplo, para Windows 11, necesitarás un procesador de 1GHz o más rápido con 2 o más núcleos, 4GB de RAM, 64GB de almacenamiento y una tarjeta gráfica compatible.</p>
+            <img src="requisitos.png" alt="requisitos" class="img">
             <p>Conecta un teclado y mouse USB a tu notebook si no tiene este tipo de dispositivos integrados. Asegúrate de que funcionen correctamente.</p>
             <p>Descarga la imagen ISO de Windows desde la página oficial de Microsoft. Hay diferentes ediciones (Home, Pro, etc.) así que elige la que necesites.</p>
             <p>Consigue una unidad USB vacía con al menos 8GB de capacidad de almacenamiento. Es recomendable usar una unidad nueva o formatearla completamente.</p>
             <p>Descarga e instala un programa para crear unidades USB booteable como Rufus. Este es gratuito y compatible con Windows.</p>
+            <img src="logo-rufus.png" alt="requisitos" class="img">
             <p>Enlaces oficiales para descargar:</p>
             <ul>
                 <li><a href="https://www.microsoft.com/es-es/software-download/windows11" target="_blank">Descargar ISO</a></li>
@@ -45,6 +47,7 @@
         <section id="usb-booteable">
             <h2>2. Creación de un USB Booteable</h2>
             <p>Abre el programa Rufus una vez instalado.</p>
+            <img src="rufus.png" alt="requisitos" class="img">
             <p>En la opción "Dispositivo" selecciona tu unidad USB de al menos 8GB. Haz clic en "Seleccionar" y elige la imagen ISO de Windows que descargaste previamente.</p>
             <p>En "Esquema de partición" es recomendable elegir "Tabla de Partición GPT" para unidades de 4GB o más grandes.</p>
             <p>Bajo "Sistema de archivos", selecciona "NTFS" como formato para la unidad. Las demás opciones puedes dejarlas con la configuración por defecto.</p>
